# affstools

./: Makefile.am  Makefile.in  README  affs_config.h  affsck.c  amigaffs.h  bitmap.c  buffer.c  config.h.in  configure  configure.in  inode.c  mkaffs.c  util.c
